fix header size on small screens

--- a/docs/style.css
+++ b/docs/style.css
@@ -28,7 +28,7 @@ body {
 body {
 	display: grid;
 	grid-template-columns: 20rem auto;
-	grid-template-rows: 4rem auto 5rem;
+	grid-template-rows: 1fr auto 5rem;
 	grid-template-areas: "header header" "nav main" "footer footer";
 }
 
@@ -385,7 +385,7 @@ th {
 
 	body {
 		grid-template-columns: auto;
-		grid-template-rows: 4rem auto 5rem;
+		grid-template-rows: 1fr auto 5rem;
 		grid-template-areas: "header" "main" "footer";
 	}
 
